adds more webpage and chande style sheet

--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,7 @@
 		</ul>
 	</nav>
 	<main>
+		<div id="walloftext">
 			<h1>This is my first website :D</h1>
 			<div id="horiz">
 				<img src="img/Phone.png" alt="phone picture">
@@ -39,6 +40,7 @@
 				<img src="img/Scooter.jpg" alt="scooter picture">
 				<p>E-scooter firm Bolt pulls out of 12 cities</p>
 			</div>
+		</div>
 	</main>	
 
 	<footer>
