Adds video and delete test

--- a/About.html
+++ b/About.html
@@ -26,19 +26,15 @@
 		</ul>
 	</nav>
 	<main>
-			<h1>This is a "I present myself" page:D</h1>
-			<div id="horiz">
-				<img src="img/Phone.png" alt="phone picture">
-				<p>Samsung Galaxy S11/S20 Plus video leaks showing phone in real life!</p>
-			</div>
-			<div class="column">
-				<img src="img/Card.jpg" alt="card picture">
-				<p>Police are investigating three ATM explosions in two Florida counties</p>
-			</div>
-			<div class="column">
-				<img src="img/Scooter.jpg" alt="scooter picture">
-				<p>E-scooter firm Bolt pulls out of 12 cities</p>
-			</div>
+			<h1>This is a "I present myself" video! :D</h1>
+			
+
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/KflTVsmXyXU"
+	frameborder="0" allowfullscreen></iframe>
+
+	<br>
+	<br>
+
 	</main>	
 
 	<footer>
