add pages and stuff

--- a/Blog.html
+++ b/Blog.html
@@ -12,7 +12,7 @@
 
 	<header id="header" class="header">
 		<span id="title">
-			Fulvia Future Full-Stack Web Developer</span>
+			<b>Fulvia Future Full-Stack Web Developer</b></span>
 		<span id="logo">	
 			<img src="img/logo.png" alt="logo"></span>
 	</header>
@@ -26,19 +26,36 @@
 		</ul>
 	</nav>
 	<main>
-			<h1>Here it is my Blog :-D</h1>
-			<div id="horiz">
-				<img src="img/Phone.png" alt="phone picture">
-				<p>Samsung Galaxy S11/S20 Plus video leaks showing phone in real life!</p>
-			</div>
-			<div class="column">
-				<img src="img/Card.jpg" alt="card picture">
-				<p>Police are investigating three ATM explosions in two Florida counties</p>
-			</div>
-			<div class="column">
-				<img src="img/Scooter.jpg" alt="scooter picture">
-				<p>E-scooter firm Bolt pulls out of 12 cities</p>
-			</div>
+	<div>
+    <div class="towel">
+      <h2>I am a theather kid</h2>
+      <h5>How i discovered the stage ad myself, Gen 18, 2020</h5>
+      <div class="fakeimg" style="height:250px;"><img src="https://www.ilnodo.com/risorse/photogallery/204-DSC_0095.jpg" alt="myfotoatthestage"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+    </div>
+    <hr>
+ </div>
+	<div>
+    <div class="towel">
+      <h2>NERDY and proud of it</h2>
+      <h5>The call of autenticity, Gen 18, 2020</h5>
+      <div class="fakeimg" style="height:250px;"><img src="img/pienerds.jpg" alt="myfotoatthestage"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+    </div>
+    <hr>
+ </div>
+
+
 	</main>	
 
 	<footer>
