--- a/Contact.html
+++ b/Contact.html
@@ -12,7 +12,7 @@
 
 	<header id="header" class="header">
 		<span id="title">
-			Fulvia Future Full-Stack Web Developer</span>
+			<b>Fulvia Future Full-Stack Web Developer</b></span>
 		<span id="logo">	
 			<img src="img/logo.png" alt="logo"></span>
 	</header>
