--- a/Blog.html
+++ b/Blog.html
@@ -7,56 +7,73 @@
 	<link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
 </head>
 <body>
-
+	
 	<div id="container">
 
-	<header id="header" class="header">
-		<span id="title">
-			<b>Fulvia Future Full-Stack Web Developer</b></span>
-		<span id="logo">	
-			<img src="img/logo.png" alt="logo"></span>
-	</header>
+			<!-- here i will put the header with the logo -->
 
-	<nav class="HorBar">
-		<ul>
-			<li><a href="Contact.html" title="Contact">Contact</a></li>
-			<li><a href="About.html" title="About">About me</a></li>
-			<li><a href="Blog.html" title="Blog">Blog</a></li>
-			<li><a href="Index.html" title="Home">Home</a></li>
-		</ul>
-	</nav>
-	<main>
-	<div>
-    <div class="towel">
-      <h2>I am a theather kid</h2>
-      <h5>How i discovered the stage ad myself, Gen 18, 2020</h5>
-      <div class="fakeimg" style="height:250px;"><img src="https://www.ilnodo.com/risorse/photogallery/204-DSC_0095.jpg" alt="myfotoatthestage"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
-    </div>
-    <hr>
- </div>
-	<div>
-    <div class="towel">
-      <h2>NERDY and proud of it</h2>
-      <h5>The call of autenticity, Gen 18, 2020</h5>
-      <div class="fakeimg" style="height:250px;"><img src="img/pienerds.jpg" alt="myfotoatthestage"></div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
-    </div>
-    <hr>
- </div>
+		<header id="header" class="header">
+			<span id="title">
+				<b>Fulvia Future Full-Stack Web Developer</b>
+			</span>
+			<span id="logo">	
+				<img src="img/logo.png" alt="logo">
+			</span>
+		</header>
+		
+			<!-- here there is the navigation bar made with an unordere list  -->
+	
+		<nav class="HorBar">
+			<ul>
+				<li><a href="Contact.html" title="Contact">Contact</a></li>
+				<li><a href="About.html" title="About">About me</a></li>
+				<li><a href="Blog.html" title="Blog">Blog</a></li>
+				<li><a href="Index.html" title="Home">Home</a></li>
+			</ul>
+		</nav>
 
+	<main>	
+
+			<!-- here i will put my first fake blog-post -->
+
+		<div>	
+			<hr>
+    		<div class="towel">
+    	  			<h2>I am a theater kid</h2>
+    	 	 		<h5>How i discovered the stage ad myself, Gen 18, 2020</h5>
+     		 	<div class="fakeimg" style="height:250px;"><img src="https://www.ilnodo.com/risorse/photogallery/204-DSC_0095.jpg" alt="myfotoatthestage">
+     			</div>
+     		 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     				 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+     		 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+     		 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     	 			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+     	 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   				</div>
+    				<hr>
+		 	</div>
+		<div>
+
+			<!-- here there is my second fake blog-post -->
+
+   			 <div class="towel">
+    			  	<h2>NERDY and proud of it</h2>
+     			 	<h5>The call of autenticity, Gen 18, 2020</h5>
+     			 <div class="fakeimg" style="height:250px;"><img src="img/pienerds.jpg" alt="myfotoatthestage">
+     			 </div>
+     				 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    				  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    			 	 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    			 	 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+    			 	 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+    			 	 proident, sunt in culpa qui officia deserunt mollit anim id est laborum..</p>
+   			 </div>
+  				  <hr>
+ 		</div>
 
 	</main>	
+
+			<!-- here there is my footer, with a tiny logo -->
 
 	<footer>
 		<img src="img/logo.png" alt="logo" height="50px">
