--- a/About.html
+++ b/About.html
@@ -10,32 +10,47 @@
 
 	<div id="container">
 
-	<header id="header" class="header">
-		<span id="title">
-			<b>Fulvia Future Full-Stack Web Developer</b></span>
-		<span id="logo">	
-			<img src="img/logo.png" alt="logo"></span>
-	</header>
+			<!-- here i will put the header with the logo -->
 
-	<nav class="HorBar">
-		<ul>
-			<li><a href="Contact.html" title="Contact">Contact</a></li>
-			<li><a href="About.html" title="About">About me</a></li>
-			<li><a href="Blog.html" title="Blog">Blog</a></li>
-			<li><a href="Index.html" title="Home">Home</a></li>
-		</ul>
-	</nav>
+		<header id="header" class="header">
+			<span id="title">
+				<b>Fulvia Future Full-Stack Web Developer</b>
+			</span>
+			<span id="logo">	
+				<img src="img/logo.png" alt="logo">
+			</span>
+		</header>
+		
+			<!-- here there is the navigation bar made with an unordered list  -->
+	
+		<nav class="HorBar">
+			<ul>
+				<li><a href="Contact.html" title="Contact">Contact</a></li>
+				<li><a href="About.html" title="About">About me</a></li>
+				<li><a href="Blog.html" title="Blog">Blog</a></li>
+				<li><a href="Index.html" title="Home">Home</a></li>
+			</ul>
+		</nav>
+
 	<main>
+
+		<!-- Is it cheating if i put a videoclip made by me?  -->
+
+		<div id="walloftext">
 			<h1>This is a "I present myself" video! :D</h1>
 			
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/KflTVsmXyXU"
-	frameborder="0" allowfullscreen></iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/KflTVsmXyXU"
+			frameborder="0" allowfullscreen></iframe>
 
-	<br>
-	<br>
+		</div>
+
+			<br>
+			<br>
 
 	</main>	
+
+			<!-- here it goes the footer -->
 
 	<footer>
 		<img src="img/logo.png" alt="logo" height="50px">
