--- a/Contact.html
+++ b/Contact.html
@@ -10,66 +10,76 @@
 
 	<div id="container">
 
-	<header id="header" class="header">
-		<span id="title">
-			<b>Fulvia Future Full-Stack Web Developer</b></span>
-		<span id="logo">	
-			<img src="img/logo.png" alt="logo"></span>
-	</header>
+			<!-- here i will put the header with the logo -->
 
-	<nav class="HorBar">
-		<ul>
-			<li><a href="Contact.html" title="Contact">Contact</a></li>
-			<li><a href="About.html" title="About">About me</a></li>
-			<li><a href="Blog.html" title="Blog">Blog</a></li>
-			<li><a href="Index.html" title="Home">Home</a></li>
-		</ul>
-	</nav>
+		<header id="header" class="header">
+			<span id="title">
+				<b>Fulvia Future Full-Stack Web Developer</b>
+			</span>
+			<span id="logo">	
+				<img src="img/logo.png" alt="logo">
+			</span>
+		</header>
+		
+			<!-- here there is the navigation bar made with an unordered list  -->
+	
+		<nav class="HorBar">
+			<ul>
+				<li><a href="Contact.html" title="Contact">Contact</a></li>
+				<li><a href="About.html" title="About">About me</a></li>
+				<li><a href="Blog.html" title="Blog">Blog</a></li>
+				<li><a href="Index.html" title="Home">Home</a></li>
+			</ul>
+		</nav>
+
 	<main>
-		<div id="formulaire">
-			<h1>This is a "first contact" page :D</h1>
+			<div id="walloftext">
+				<h1>This is a "first contact" page :D</h1>
+			</div>
+
+<!-- I am adding all the forms i know, with a little decoration -->
+
 			<div>
-				<form id="Form" action="action_page.php">
-						<p> How can i call you?</p>
-						<input type="text" name="firstname" placeholder="First name"><br>
+				<form id="Form" action="fake_action_page">
+					<p> How can i call you?</p>
+					<input type="text" name="firstname" placeholder="First name"><br>  	<!-- text type formu  -->
 						<input type="text" name="lastname"  placeholder="Last name"><br>
 						<input type="text" name="nickname"  placeholder="Nickname"><br>
-				<p>What are your favourite pronouns?</p>
-					<input type="radio" name="gender" value="female"> She/Her<br>
-					<input type="radio" name="gender" value="male" checked> He/Him<br>
-					<input type="radio" name="gender" value="both" checked> They/Them<br>
-					<input type="radio" name="gender" value="other"> Other <br>
-				<p>Would you describe yourself as a..?</p>
-				<select name="culturegroup">                                                                                  
-   					<option value="nerd">Nerd</option>
-   					<option value="geek">Geek</option>                              
-   					<option value="dork">Dork</option>
-   					<option value="dork">Otaku</option>
-   					<option value="fujoshi">Fujoshi</option>
-				</select>
+					<p>What are your favourite pronouns?</p>
+						<input type="radio" name="gender" value="female"> She/Her<br>	<!-- the form with the bullet to chek -->
+						<input type="radio" name="gender" value="male" checked> He/Him<br>
+						<input type="radio" name="gender" value="both" checked> They/Them<br>
+						<input type="radio" name="gender" value="other"> Other <br>
+					<p>Would you describe yourself as a..?</p>
+					<select name="culturegroup">                                                                                  
+   						<option value="nerd">Nerd</option> 		<!-- the form where you have to scroll an select one of many options -->
+   						<option value="geek">Geek</option>                              
+   						<option value="dork">Dork</option>
+   						<option value="dork">Otaku</option>
+   						<option value="fujoshi">Fujoshi</option>
+					</select>
 						<br>
 						<br>
-				<p>Ok, that's all! It is time to tell me what's in yout mind:</p>
-				<textarea name="message" rows="20" cols="50">                                
-					Pour here it all! But be short, please!
+					<p>Ok, that's all! It is time to tell me what's in yout mind:</p> <!-- the "open letter" form -->    
+				<textarea name="message" rows="20" cols="30"> Pour here it all! But be short, please!
 				</textarea>
 						<br>
 						<br>
-			 	<input type="submit" value="Send me all"> 
+			 	<input type="submit" value="Send me all"> 				<!-- the "button" to press to send everything-->
 			 			<br>
 				</form>
 			</div>	
 						<br>
 						<br>
-		</div>
 	</main>	
 
-	<footer>
-		<img src="img/logo.png" alt="logo" height="50px">
-		<p>Fulvia-CodeFactory 2020</p>
-	</footer>
-	</div>
+		<!-- here tehere is the footer, again -->
 
+		<footer>
+			<img src="img/logo.png" alt="logo" height="50px">
+			<p>Fulvia-CodeFactory 2020</p>
+		</footer>
+	</div>
 
 </body>
 </html>
