--- a/Index.html
+++ b/Index.html
@@ -10,45 +10,56 @@
 
 	<div id="container">
 
-	<header id="header" class="header">
-		<span id="title">
-			<b>Fulvia Future Full-Stack Web Developer</b></span>
-		<span id="logo">	
-			<img src="img/logo.png" alt="logo"></span>
-	</header>
+			<!-- here i will put the header with the logo -->
 
-	<nav class="HorBar">
-		<ul>
-			<li><a href="Contact.html" title="Contact">Contact</a></li>
-			<li><a href="About.html" title="About">About me</a></li>
-			<li><a href="Blog.html" title="Blog">Blog</a></li>
-			<li><a href="Index.html" title="Home">Home</a></li>
-		</ul>
-	</nav>
-	<main>
-		<div id="walloftext">
-			<h1>This is my first website :D</h1>
-			<div id="horiz">
-				<img src="img/Phone.png" alt="phone picture">
-				<p>Samsung Galaxy S11/S20 Plus video leaks showing phone in real life!</p>
-			</div>
-			<div class="column">
-				<img src="img/Card.jpg" alt="card picture">
-				<p>Police are investigating three ATM explosions in two Florida counties</p>
-			</div>
-			<div class="column">
-				<img src="img/Scooter.jpg" alt="scooter picture">
-				<p>E-scooter firm Bolt pulls out of 12 cities</p>
-			</div>
-		</div>
-	</main>	
+		<header id="header" class="header">
+			<span id="title">
+				<b>Fulvia Future Full-Stack Web Developer</b>
+			</span>
+			<span id="logo">	
+				<img src="img/logo.png" alt="logo">
+			</span>
+		</header>
+		
+			<!-- here there is the navigation bar made with an unordered list  -->
+	
+		<nav class="HorBar">
+			<ul>
+				<li><a href="Contact.html" title="Contact">Contact</a></li>
+				<li><a href="About.html" title="About">About me</a></li>
+				<li><a href="Blog.html" title="Blog">Blog</a></li>
+				<li><a href="Index.html" title="Home">Home</a></li>
+			</ul>
+		</nav>
+		
+			<!-- here there is my layout of the photo wall -->
 
-	<footer>
-		<img src="img/logo.png" alt="logo" height="50px">
-		<p>Fulvia-CodeFactory 2020</p>
-	</footer>
+		<main>
+			<div id="walloftext">
+				<h1>This is my first website :D</h1>
+				<div class="row">
+					<img src="img/Phone.png" alt="phone picture">
+					<p>Samsung Galaxy S11/S20 Plus video leaks showing phone in real life!</p>
+				</div>
+				<div class="column">
+					<img src="img/Card.jpg" alt="card picture">
+					<p>Police are investigating three ATM explosions in two Florida counties</p>
+				</div>
+				<div class="column">
+					<img src="img/Scooter.jpg" alt="scooter picture">
+					<p>E-scooter firm Bolt pulls out of 12 cities</p>
+				</div>
+
+			</div>
+		</main>	
+
+			<!-- here there is my footer, with a tiny logo -->
+
+		<footer>
+			<img src="img/logo.png" alt="logo" height="50px">
+			<p>Fulvia-CodeFactory 2020</p>
+		</footer>
 	</div>
-
 
 </body>
 </html>
